--- a/分享汇总.md
+++ b/分享汇总.md
@@ -2,15 +2,16 @@
 
 ## 开发技术
 - Python
-	> [Scrapy 官网](http://scrapy.org/)  
-	> [Django 官网](https://www.djangoproject.com/)  
-	> [Python 入门](http://www.liaoxuefeng.com/wiki/001374738125095c955c1e6d8bb493182103fac9270762a000)  
+	> [Scrapy 官网](http://scrapy.org/)
+	> [Django 官网](https://www.djangoproject.com/)
+	> [Python 入门](http://www.liaoxuefeng.com/wiki/001374738125095c955c1e6d8bb493182103fac9270762a000)
 	> [Python Django Web 开发框架教程](https://django-chinese-docs.readthedocs.org/en/latest/intro/index.html)
+	> [PySpider 教程](http://docs.pyspider.org/en/latest/tutorial/)
 
 - Android
 
 - iOS
-	> [Swift 简易教程](http://www.codedata.com.tw/mobile/swift-tutorial-class-1-xcode-helloworld)  
+	> [Swift 简易教程](http://www.codedata.com.tw/mobile/swift-tutorial-class-1-xcode-helloworld)
 	> [斯坦福大学公开课：iOS 8开发](http://open.163.com/special/opencourse/ios8.html)
 
 - Markdown
@@ -24,17 +25,17 @@
 - [Ubuntu 14.04.2 64bit](http://cdimage.ubuntu.com/releases/14.04.2/release/ubuntu-14.04.2-desktop-amd64+mac.iso)
 - [PyCharm 下载页面](https://www.jetbrains.com/pycharm/download/) | [Linux Version](http://download-cf.jetbrains.com/python/pycharm-professional-4.0.5.tar.gz)
 
-	> 注册信息：  
-	> 用户名  
+	> 注册信息：
+	> 用户名
 	>> Rover12421
-	
-	> 序列号  
-	>>===== LICENSE BEGIN =====  
-	1461-D99591T  
-	00002L3Q!dzAtQE1FwwvMmjlD0LElQ  
-	6O9KQ4nfxaBo1TSy8bEoaSLRNaoelT  
-	vJ!3WAXZj!mpajoWWEEVIZufu7rB38  
-	===== LICENSE END ===== 
+
+	> 序列号
+	>>===== LICENSE BEGIN =====
+	1461-D99591T
+	00002L3Q!dzAtQE1FwwvMmjlD0LElQ
+	6O9KQ4nfxaBo1TSy8bEoaSLRNaoelT
+	vJ!3WAXZj!mpajoWWEEVIZufu7rB38
+	===== LICENSE END =====
 
 - [Sublime Text 2](https://www.sublimetext.com/2)
 - [Github for Windows](https://windows.github.com/)
@@ -46,11 +47,11 @@
 4. Git on Win 必须控制换行符的提交，详情[参考](https://github.com/cssmagic/blog/issues/22)。
 	Windows 下的 Git 客户端位于：
 `C:\Users\用户名\AppData\Local\GitHub\PortableGit_c2ba306e536fdf878271f7fe636a147ff37326ad\bin\git.exe`
-	
+
 	> 1. 打开项目根目录下的 \.git 文件夹
 	> 2. 用 Notepad++ 打开 config 文件
-	> 3. 在 core 节点下添加  
-		``autocrlf = false``  
+	> 3. 在 core 节点下添加
+		``autocrlf = false``
 		``safecrlf = true``
 
 
