--- a/分享汇总.md
+++ b/分享汇总.md
@@ -36,12 +36,12 @@
 	>> Rover12421
 
 	> 序列号
-	>>===== LICENSE BEGIN =====
-	>>1461-D99591T
-	>>00002L3Q!dzAtQE1FwwvMmjlD0LElQ
-	>>6O9KQ4nfxaBo1TSy8bEoaSLRNaoelT
-	>>vJ!3WAXZj!mpajoWWEEVIZufu7rB38
-	>>===== LICENSE END =====
+	===== LICENSE BEGIN =====  
+	1461-D99591T  
+	00002L3Q!dzAtQE1FwwvMmjlD0LElQ  
+	6O9KQ4nfxaBo1TSy8bEoaSLRNaoelT  
+	vJ!3WAXZj!mpajoWWEEVIZufu7rB38  
+	===== LICENSE END =====  
 
 - [Sublime Text 2](https://www.sublimetext.com/2)
 - [Github for Windows](https://windows.github.com/)
@@ -51,14 +51,13 @@
 2. 所有文件必须以 UTF-8 Without BOM 格式新建和保存。
 3. 行结束符以 Unix 标准的 ``\n`` 即 ``LF`` 结尾。
 4. Git on Win 必须控制换行符的提交，详情[参考](https://github.com/cssmagic/blog/issues/22)。
-	Windows 下的 Git 客户端位于：
-
+	Windows 下的 Git 客户端位于：  
 	`C:\Users\用户名\AppData\Local\GitHub\PortableGit_c2ba306e536fdf878271f7fe636a147ff37326ad\bin\git.exe`
 
 	> 1. 打开项目根目录下的 \.git 文件夹
 	> 2. 用 Notepad++ 打开 config 文件
 	> 3. 在 core 节点下添加
-		``autocrlf = false``
+		``autocrlf = false``  
 		``safecrlf = true``
 
 
