--- a/分享汇总.md
+++ b/分享汇总.md
@@ -36,7 +36,7 @@
 	>> Rover12421
 
 	> 序列号
-	===== LICENSE BEGIN =====  
+	>>===== LICENSE BEGIN =====  
 	1461-D99591T  
 	00002L3Q!dzAtQE1FwwvMmjlD0LElQ  
 	6O9KQ4nfxaBo1TSy8bEoaSLRNaoelT  
